# advent-of-code

./: .gitignore  README.md
2020/: Cargo.toml
2020/src/day1/: main.rs
2020/src/day2/: main.rs
2020/src/day3/: main.rs
2020/src/day4/: main.rs
2020/src/day5/: main.rs
2020/src/day6/: main.rs
2020/src/day7/: main.rs
