[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Martin Holzhauer <martin@holzhauer.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day4"
path = "src/day4/main.rs"

[[bin]]
name = "day5"
path = "src/day5/main.rs"

[[bin]]
name = "day6"
path = "src/day6/main.rs"

[[bin]]
name = "day7"
path = "src/day7/main.rs"